--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "yarn format-check && eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "format-check": "prettier --check .",
     "format": "prettier --write .",
     "preview": "vite preview"
