--- a/helm/logpanel/Chart.yaml
+++ b/helm/logpanel/Chart.yaml
@@ -15,3 +15,4 @@ type: application
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
 # Do not edit manually, this is updated automatically by CI
 version: 0.1.0
+appVersion: 0.1.1rc1
